--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ spirv_headers = "1.3.4"
 num-traits = "0.2.6"
 
 [build-dependencies]
-cc = "1.0.32" 
+cc = { version = "1.0.36"}
 
 [build-dependencies.bindgen]
 version = "0.49.0"
