--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,8 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 bitflags = "1.0.4"
-spirv_headers = "1.3.4"
+#spirv_headers = "1.3.4"
+spirv_headers = { git = "https://github.com/Jasper-Bekkers/rspirv.git" }
 num-traits = "0.2.6"
 
 [build-dependencies]
