--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ spirv_headers = { git = "https://github.com/Jasper-Bekkers/rspirv.git" }
 num-traits = "0.2.6"
 
 [build-dependencies]
-cc = "1.0.32" 
+cc = { version = "1.0.36"}
 
 [build-dependencies.bindgen]
 version = "0.49.0"
