--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,16 +36,15 @@ travis-ci = { repository = "gwihlidal/spirv-reflect-rs" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-bitflags = "1.0.4"
-#spirv_headers = "1.3.4"
-spirv_headers = { git = "https://github.com/Jasper-Bekkers/rspirv.git" }
-num-traits = "0.2.6"
+bitflags = "1.2.1"
+spirv_headers = "1.4.1"
+num-traits = "0.2.8"
 
 [build-dependencies]
-cc = { version = "1.0.36"}
+cc = { version = "1.0.46"}
 
 [build-dependencies.bindgen]
-version = "0.49.0"
+version = "0.51.1"
 optional = true
 
 [profile.release]
